adding some style to page

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,1 +1,4 @@
-<footer>footer stuf</footer>
+<footer class="footer">
+  <p class="footer-text"> Silvia Torres for Adalab 2023</p>
+  <img class="footer-logo" src="./assets/images/filmTape.png" alt="film tape black and white">
+</footer>
