--- a/src/html/partials/form.html
+++ b/src/html/partials/form.html
@@ -1,13 +1,9 @@
-<section class="form">
-  <h1 class="form-title">Show seeker</h1>
-  <p class="form-text">Have you ever wondered, if there is a web or application from which you can search your series,
+<section class="info">
+  <h1 class="info-title">Show seeker</h1>
+  <p class="info-text">Have you ever wondered, if there is a web or application from which you can search your series,
     add them to
     favorites to keep track of what you’ve seen, or what you want to see and what to recomend? it hasn’t happened to
     you that
     you want to recommend THAT show to a friend and you don’t remember his name? With Show Seeker will not happen
     again!</p>
 </section>
-<form class="form-search">
-  <input class="js-input-search" type="text" placeholder="Search a tv show">
-  <button class="js-btn-search">Search</button>
-</form>
