--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,7 +1,6 @@
 <header class="header">
-  <!-- <img src="./assets/images/filmTape.png" alt="Film tape" class="header_logo"> -->
   <img src="./assets/images/movie.gif" alt="Projector" class="header_logo" />
   <p class="header-text">
-    Welcome to module 2 final evaluation of Silvia Torres. Hope you like it!
+    Welcome to final evaluation of module 2 made by Silvia Torres. Hope you like it!
   </p>
 </header>
