--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,1 +1,8 @@
-$font-titles: 'Quicksand', sans-serif;
+//fonts:
+$font: 'Quicksand', sans-serif;
+
+//palette of colours:
+$titles: #341514;
+$borders: #ae3b8b;
+$color1: #1c5789;
+$color2: #e17888;
