--- a/src/html/partials/favoriteList.html
+++ b/src/html/partials/favoriteList.html
@@ -1,3 +1,11 @@
-<h2>You favourite shows:</h2>
-<section class="js-fav-list"></section>
-<button class="js-delete-fav">Erase all</button>
+<div class="form">
+  <form class="form-search">
+    <input class="js-input-search" type="text" placeholder="Search a show">
+    <button class="js-btn-search">Search</button>
+  </form>
+</div>
+<div class="favorites">
+  <h2 class="favorites-title">You favourite shows:</h2>
+  <section class="js-fav-list"></section>
+  <button class="js-delete-fav">Erase all</button>
+</div>
