--- a/src/scss/layout/_favoritesList.scss
+++ b/src/scss/layout/_favoritesList.scss
@@ -1,20 +1,81 @@
-.js-fav.list {
+.form {
   display: grid;
-  width: 50vw;
-  height: 100vh;
+  grid-template-columns: 1fr;
+  &-search {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    padding-top: 5%;
+    @media all and (min-width: 768px) {
+      padding-top: 2%;
+    }
+  }
 }
 
-.js-card {
-  border: 2px solid black;
-  background-color: lightgrey;
+input[type='text'] {
+  border-radius: 10px;
+  width: 150px;
+  border: 1px solid $borders;
+}
+
+.js-btn-search {
+  color: white;
+  padding: 1%;
+  background-color: $color2;
+  border: 1px solid $borders;
+  border-radius: 10px;
+  &:hover {
+    background-color: $borders;
+    color: $titles;
+    border-color: $titles;
+  }
+}
+
+//lista de favoritos
+
+.favorites-title {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.js-fav.list {
+  width: 50vw;
 }
 
 .js-fav {
+  display: block;
   background-color: black;
   color: lightgray;
+  width: 150px;
+  height: 150px;
   cursor: pointer;
+  &-corss {
+    cursor: pointer;
+    display: inline-block;
+  }
+  &-img {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+  }
+  &-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    display: inline-block;
+  }
 }
 
 .js-delete-fav {
+  color: white;
+  padding: 1%;
+  background-color: $color2;
+  border: 1px solid $borders;
+  border-radius: 10px;
   cursor: pointer;
+  &:hover {
+    background-color: $borders;
+    color: $titles;
+    border-color: $titles;
+  }
 }
