--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,16 +1,29 @@
 .header {
   display: flex;
-  justify-content: space-evenly;
-  padding: 10%;
+  justify-content: center;
+  padding: 5%;
+  border: 2px solid #ae3b8b;
+  border-radius: 10px;
+  @media all and (min-width: 768px) {
+    padding: 2%;
+  }
   &_logo {
     width: 70px;
     height: 70px;
     padding-top: 1rem;
+    margin-right: 1rem;
+    @media all and (min-width: 768px) {
+      width: 80px;
+    }
   }
   &-text {
     padding-top: 2.5rem;
-    font-family: $font-titles;
     font-weight: 700;
     font-size: 1.8rem;
+    color: #341514;
+    @media all and (min-width: 768px) {
+      padding-top: 3rem;
+      font-size: 2.2rem;
+    }
   }
 }
