maded little changes

--- a/src/html/partials/info.html
+++ b/src/html/partials/info.html
@@ -4,6 +4,6 @@
     add them to
     favorites to keep track of what you’ve seen, or what you want to see and what to recomend? it hasn’t happened to
     you that
-    you want to recommend THAT show to a friend and you don’t remember his name? With Show Seeker will not happen
+    you want to recommend THAT show to a friend and you don’t remember his name? With Show Seeker this will not happen
     again!</p>
 </section>
