--- a/src/html/partials/resultList.html
+++ b/src/html/partials/resultList.html
@@ -1,2 +1,4 @@
-<h2 class="js-form-title">Results:</h2>
-<section class="js-form-list"></section>
+<div class="results-list">
+  <h2 class="js-form-title">Results:</h2>
+  <ul class="js-form-list"></ul>
+</div>
