--- a/src/html/partials/favoriteList.html
+++ b/src/html/partials/favoriteList.html
@@ -1,11 +1,11 @@
-<div class="form">
-  <form class="form-search">
-    <input class="js-input-search" type="text" placeholder="Search a show">
-    <button class="js-btn-search">Search</button>
-  </form>
-</div>
 <div class="favorites">
+  <div class="favorites-form">
+    <form class="favorites-form-search">
+      <input class="js-input-search" type="text" placeholder="Search a show">
+      <button class="js-btn-search">Search</button>
+    </form>
+  </div>
   <h2 class="favorites-title">You favourite shows:</h2>
-  <section class="js-fav-list"></section>
+  <ul class="js-fav-list"></ul>
   <button class="js-delete-fav">Erase all</button>
 </div>
