--- a/src/scss/layout/_favoritesList.scss
+++ b/src/scss/layout/_favoritesList.scss
@@ -1,14 +1,18 @@
-.form {
-  display: grid;
-  grid-template-columns: 1fr;
-  &-search {
+.favorites {
+  background-color: #dbe1eb;
+  width: 50%;
+  &-form {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    justify-content: center;
-    padding-top: 5%;
-    @media all and (min-width: 768px) {
-      padding-top: 2%;
+    flex-direction: column-reverse;
+    &-search {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      justify-content: center;
+      padding-top: 5%;
+      @media all and (min-width: 768px) {
+        padding-top: 2%;
+      }
     }
   }
 }
@@ -17,6 +21,7 @@ input[type='text'] {
   border-radius: 10px;
   width: 150px;
   border: 1px solid $borders;
+  display: inline;
 }
 
 .js-btn-search {
@@ -25,6 +30,7 @@ input[type='text'] {
   background-color: $color2;
   border: 1px solid $borders;
   border-radius: 10px;
+  width: 15%;
   &:hover {
     background-color: $borders;
     color: $titles;
@@ -37,9 +43,10 @@ input[type='text'] {
 .favorites-title {
   font-size: 1.8rem;
   font-weight: 600;
+  text-align: center;
 }
 
-.js-fav.list {
+.js-fav-list {
   width: 50vw;
 }
 
@@ -47,13 +54,8 @@ input[type='text'] {
   display: block;
   background-color: black;
   color: lightgray;
-  width: 150px;
-  height: 150px;
+  width: 100%;
   cursor: pointer;
-  &-corss {
-    cursor: pointer;
-    display: inline-block;
-  }
   &-img {
     width: 100px;
     height: 100px;
@@ -62,6 +64,10 @@ input[type='text'] {
   &-title {
     font-size: 1.5rem;
     font-weight: 600;
+    display: inline-block;
+  }
+  &-corss {
+    cursor: pointer;
     display: inline-block;
   }
 }
