--- a/src/scss/layout/_resultList.scss
+++ b/src/scss/layout/_resultList.scss
@@ -1,21 +1,28 @@
+.results-list {
+  width: 50%;
+  background-color: #f4dfeb;
+}
+
 .js-form-title {
-  height: 10%;
-  grid-column: span 3;
+  margin: 1rem;
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 .js-form-list {
   width: 600px;
-  height: 400px;
-  overflow: auto;
+  overflow: scroll;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 .js-card {
   border: 2px solid black;
   background-color: lightgrey;
-
+  width: calc((100% - 30px) / 4);
   grid-column: span 1;
 }
