--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,7 +2,7 @@
 @import 'core/reset';
 @import 'layout/page';
 @import 'layout/header';
-@import 'layout/form';
+@import 'layout/info';
 @import 'layout/resultList';
 @import 'layout/favoritesList';
 @import 'layout/footer';
