--- a/src/scss/layout/_favoritesList.scss
+++ b/src/scss/layout/_favoritesList.scss
@@ -1,10 +1,11 @@
 .favorites {
-  background-color: #dbe1eb;
-  width: 50%;
+  width: 30vw;
+  margin: 0;
   &-form {
     display: flex;
     flex-direction: column-reverse;
     &-search {
+      padding: 1.2rem;
       display: flex;
       flex-direction: column;
       gap: 1rem;
@@ -30,7 +31,9 @@ input[type='text'] {
   background-color: $color2;
   border: 1px solid $borders;
   border-radius: 10px;
-  width: 15%;
+  width: 20%;
+  display: inline;
+  cursor: pointer;
   &:hover {
     background-color: $borders;
     color: $titles;
@@ -44,40 +47,49 @@ input[type='text'] {
   font-size: 1.8rem;
   font-weight: 600;
   text-align: center;
-}
+} //H2
 
 .js-fav-list {
+  //UL
   width: 50vw;
 }
 
 .js-fav {
+  //LI
+  background-color: #dbe1eb;
+  margin: 1rem;
   display: block;
-  background-color: black;
-  color: lightgray;
-  width: 100%;
+  color: $color2;
+  width: 30vw;
+  list-style: none;
   cursor: pointer;
   &-img {
+    margin: 1rem;
     width: 100px;
     height: 100px;
     display: inline-block;
   }
   &-title {
+    margin: 1rem;
     font-size: 1.5rem;
     font-weight: 600;
     display: inline-block;
   }
-  &-corss {
+  &-cross {
+    margin: 1rem;
     cursor: pointer;
     display: inline-block;
   }
 }
 
+//ERASE BTN
 .js-delete-fav {
   color: white;
   padding: 1%;
   background-color: $color2;
   border: 1px solid $borders;
   border-radius: 10px;
+  margin: 1rem;
   cursor: pointer;
   &:hover {
     background-color: $borders;
