--- a/src/scss/layout/_favoritesList.scss
+++ b/src/scss/layout/_favoritesList.scss
@@ -7,13 +7,9 @@
     &-search {
       padding: 1.2rem;
       display: flex;
-      flex-direction: column;
       gap: 1rem;
       justify-content: center;
-      padding-top: 5%;
-      @media all and (min-width: 768px) {
-        padding-top: 2%;
-      }
+      padding: 5%;
     }
   }
 }
@@ -32,7 +28,6 @@ input[type='text'] {
   border: 1px solid $borders;
   border-radius: 10px;
   width: 20%;
-  display: inline;
   cursor: pointer;
   &:hover {
     background-color: $borders;
@@ -51,7 +46,8 @@ input[type='text'] {
 
 .js-fav-list {
   //UL
-  width: 50vw;
+  width: 90%;
+  margin-left: 10%;
 }
 
 .js-fav {
@@ -60,7 +56,7 @@ input[type='text'] {
   margin: 1rem;
   display: block;
   color: $color2;
-  width: 30vw;
+  width: 80%;
   list-style: none;
   cursor: pointer;
   &-img {
@@ -86,10 +82,11 @@ input[type='text'] {
 .js-delete-fav {
   color: white;
   padding: 1%;
+  margin: 5%;
   background-color: $color2;
   border: 1px solid $borders;
   border-radius: 10px;
-  margin: 1rem;
+  margin-left: 40%;
   cursor: pointer;
   &:hover {
     background-color: $borders;
