--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   border: 2px solid $borders;
   border-radius: 10px;
+  margin-top: auto;
   &-text {
     color: $color2;
     padding-top: 1.8%;
