--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,3 +1,9 @@
+.main {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 .list-container {
   display: flex;
   flex-direction: row-reverse;
