changed colours and general style

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <img src="./assets/images/movie.gif" alt="Projector" class="header_logo" />
   <p class="header-text">
-    Welcome to final evaluation of module 2 made by Silvia Torres. Hope you like it!
+    Show seeker
   </p>
 </header>
