--- a/src/html/partials/info.html
+++ b/src/html/partials/info.html
@@ -1,6 +1,8 @@
 <section class="info">
-  <h1 class="info-title">Show seeker</h1>
-  <p class="info-text">Wondering if there's a platform to search, add favorite series, and easily recommend shows to
-    friends? Show Seeker is the solution, preventing the problem of forgetting show names when making recommendations.
+  <p class="info-text">
+    <i class="fa-solid fa-quote-left"></i>Wondering if there's a platform to search, add favorite series, and easily
+    recommend shows to
+    friends? Show Seeker is the solution, preventing the trouble of forgetting show names when making recommendations.
+    <i class="fa-solid fa-quote-right"></i>
   </p>
 </section>
