--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,31 +2,32 @@
   display: flex;
   justify-content: center;
   padding: 5%;
-  border: 2px solid #ae3b8b;
+  background-color: #e7bfd7;
   @media all and (min-width: 768px) {
     padding: 2%;
   }
   &_logo {
     width: 50px;
     height: 50px;
-    padding-top: 1rem;
-    margin-right: 1rem;
     @media all and (min-width: 768px) {
-      width: ;
-      height: ;
+      width: 70px;
+      height: 70px;
+    }
+    @media all and (min-width: 1200px) {
+      width: 90px;
+      height: 90px;
     }
   }
   &-text {
-    padding-top: 2.5rem;
+    margin: auto;
     font-weight: 700;
-    font-size: 1.4rem;
+    font-size: 2rem;
     color: #341514;
     @media all and (min-width: 768px) {
-      padding-top: 3rem;
-      font-size: 1.8rem;
+      font-size: 2.8rem;
     }
     @media all and (min-width: 1200px) {
-      font-size: 2.2rem;
+      font-size: 3.5rem;
     }
   }
 }
